Brought up to date with the live version

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 -->
 <html>
 	<head>
+	    <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176770131-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-176770131-1');
+        </script>
+        <script data-ad-client="ca-pub-3945042720845721" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+
 		<title>R Bharathkumar</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -29,9 +41,10 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>Bharath is an aspiring mathematical/theoretical physicist from India in his fourth-year in the Integrated Masters (BS+MS) programme at the Indian Institute of Science Education and Research located in Mohali, Punjab, India. <br><br>He has broad interest in high energy physics and cosmology, with a current focus on quantum mechanical descriptions of gravity, with an emphasis on using information theory to further probe the AdS/CFT correspondence.<br><br>Further information about his work and his interests besides theoretical high-energy physics can be found on the other pages of this website. <br><br>If you wish to contact him, feel free to send him an email.</p>
+						<p>I am an aspiring mathematical/theoretical physicist in my fifth-year in the Integrated Masters (BS+MS) programme at the Indian Institute of Science Education and Research Mohali and a visiting student at the International Centre for Theoretical Sciences at Bangalore.<br><br>I have a broad interest in high-energy physics and related areas. Currently, my focus mostly revolves around the field theoretic aspects of AdS/CFT, with an occasional dabbling in the stringy aspects of AdS/CFT, and even extensions to flat space holography.<br><br>Further information about my (past) work and my interests besides theoretical high-energy physics can be found below. Unfortunately, most of the interesting projects I am currently working on are at an early stage, but I hope to be able to write something on them soon. <br><br>If you wish to contact me, feel free to send me an email using the button on the left, or at firstname(dot)r(at)icts(dot)res(dot)in.</font></p>
 						<ul class="actions">
-							<li><a href="https://www.dropbox.com/s/6zct6itctmqjvps/CV.pdf?dl=0" class="button" target="_blank">Curriculum Vita</a></li>
+							<li><a href="pages/publications.html" class="button">Preprints</a></li>
+							<li><a href="PDFs/Bharath_CV.pdf" class="button" target="_blank">Curriculum Vitae</a></li>
 						</ul>
 					</section>
 
@@ -40,27 +53,26 @@
 						<h2>Research Experience</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="2dcft.html">
-								<h3>Two dimensional holographic conformal field theories*</h3></a>
-								<p>Explored properties of Virasoro conformal blocks in semiclassical two-dimensional confor- mal field theories using bootstrap and monodromy methods, and its application in calculating information theoretic quantities. An extension of these results is being devised for various situations such as calculation of corrections to Ryu-Takayanagi formula and out-of-time-ordered correlators. <a href="2dcft.html">Learn more.</a></p>
+								<a href="pages/2dcft.html">
+								<h3>Two dimensional holographic conformal field theories</h3></a>
+								<p>Explored properties of Virasoro conformal blocks in semiclassical two-dimensional conformal field theories using bootstrap and monodromy methods, and its application in calculating holographic entanglement entropy. Currently, we are looking at situations involving entanglement wedge cross-section. <a href="pages/2dcft.html">Learn more.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="npqft.html">
-								<h3>The sign problem and the Lefschetz thimbles formalism*</h3></a>
-								<p>Explored applications of Picard-Lefschetz theory to the sign problem in non-perturbative QFT, with a focus on relation between Stokes phenomena and phase transitions in zero-dimensional bosonic models with quartic interactions. We are now looking to extend the results to situations in zero and higher number of dimensions, in the presence of supersymmetry. <a href="npqft.html">Learn more.</a></p>
+								<a href="pages/npqft.html">
+								<h3>The sign problem and the Lefschetz thimbles formalism</h3></a>
+								<p>Explored applications of Picard-Lefschetz theory to the sign problem in non-perturbative QFT, with a focus on relation between Stokes phenomena and phase transitions in zero-dimensional bosonic models with quartic interactions. We are now looking to extend the results to situations in zero and higher number of dimensions, in the presence of supersymmetry. <a href="pages/npqft.html">Learn more.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="iisc.html">
-								<h3>Entanglement in quantum field theory and gravity       </h3></a>
-								<p>Explored notions of entanglement in quantum field theory, focusing mainly on the Reeh-Schlieder theorem, the resulting algebra of local field operators and how correlations between operators in different spacetime regions arise. Other topics such as relative entropy of two states of a von Neumann algebra and its monotonicity, Tomita-Takesaki theory for finite-dimensional Hilbert spaces, and tradeoff between localisation of and entanglement between Rindler modes from the point of view of the AMPS firewall problem were also visited.<br><a href="iisc.html">Learn more.</a>
+								<a href="https://www.dropbox.com/s/ra6gmlsb6lz8v6z/Summer%202018%20Report.pdf?dl=0"><h3>Entanglement in quantum field theory and gravity       </h3></a>
+								<p>Explored notions of entanglement in quantum field theory, focusing mainly on the Reeh-Schlieder theorem, the resulting algebra of local field operators and how correlations between operators in different spacetime regions arise. Other topics such as relative entropy of two states of a von Neumann algebra and its monotonicity, Tomita-Takesaki theory for finite-dimensional Hilbert spaces, and tradeoff between localisation of and entanglement between Rindler modes from the point of view of the AMPS firewall problem were also visited.<br><a href="https://www.dropbox.com/s/ra6gmlsb6lz8v6z/Summer%202018%20Report.pdf?dl=0">Project Report</a>
 								</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<h3>Computational investigation of cosmic microwave background data</h3>
+								<a href="https://www.dropbox.com/s/5fi8zlq9zv0r0cp/CMB%20Project.pdf?dl=0"><h3>Computational investigation of cosmic microwave background data</h3></a>
 								<p>Worked with other undergraduates on understanding the workings of the Horn reflector telescope used at Bell Laboratories, the methods of measurements by R.W. Wilson and A.A. Penzias, the methodologies used by D. J. Fixsen and J. C. Mather in their 1990 and 1994 papers on CMBR, development of programs for the analysis of data obtained from the Far Infrared Absolute Spectrophotometer (FIRAS) apparatus onboard the Cosmic Background Explorer (COBE) satellite and recreating the results presented in the 1994 paper by D. J. Fixsen et al.<br><a href="https://www.dropbox.com/s/5fi8zlq9zv0r0cp/CMB%20Project.pdf?dl=0">Project report</a></p>
 							</article>
 						</div>
-						<p>* - currently in progress.</p>
+						<p></p>
 						<!--
 						<ul class="actions">
 							<li><a href="#" class="button">InspireHEP</a></li>
@@ -72,9 +84,9 @@
 				<!-- Three -->
 					<section id="one">
 						<h2>Other information</h2>
-						<p>Apart from my coursework, I am interested in a lot of other activities. Here's a bit of an information on them:</p>
-						<a href="FD.html"><h3>Foundation Day 2019</h3></a>
-						<p>As the main student coordinator of the 2019 Foundation Day, it was my duty to oversee the planning and the execution of the events and demonstrations that formed the open day part of the celebrations. With a team of nearly 150 subject coordinators and volunteers, we put up 14 science-themed events and 85 demonstrations spread across... <a href="FD.html">Read more</a>
+						<p>Apart from my coursework, I am interested in a lot of other activities. Here's a bit of information on them:</p>
+						<a href="pages/FD.html"><h3>Foundation Day 2019</h3></a>
+						<p>As the main student coordinator of the 2019 Foundation Day, it was my duty to oversee the planning and the execution of the events and demonstrations that formed the open day part of the celebrations. With a team of nearly 150 subject coordinators and volunteers, we put up 14 science-themed events and 85 demonstrations spread across... <a href="pages/FD.html">Read more</a>
 						<h3>Music</h3>
 						<p>Having had training in music on and off for nearly 17 years, it forms a huge part of my life. Currently, I am a part of three projects on campus. I also occasionally teach in workshops in the tri-city region. I am mainly interested in progressive metal/rock, with occasional phases of interest in classical and jazz music. I play the guitar and drums and used to play the keyboard and do vocals.</p>
 						<h3>Quizzing</h3>
@@ -113,6 +125,9 @@
 						</div> -->
 					</section>
 				<!-- Four -->
+				<section id="one">
+				    <p>By the way, I go by the name Bharath. My official name is R Bharathkumar, although in places where initials are not accepted, it is Bharathkumar Radhakrishnan. My name follows the naming convention widely used in South India where we use our father's name as an initial. Radhakrishnan is not my family name.</p>
+				</section>
 				<!--
 					<section id="four">
 						<h2>Elements</h2>
@@ -439,7 +454,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="mailto:r.bharatkumar@outlook.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; R Bharathkumar</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Last updated: 27th September 2019 (still under construction)</li>
+						<li>&copy; R Bharathkumar</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Last updated: 28th August 2020</li>
 					</ul>
 				</div>
 			</footer>
