Added description and changed colour to blue

--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
-											by HTML5 UP</h1>
+											<h1>Hi, I’m Bharath</h1>
 											<p>A free and fully responsive site template</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>I am an aspiring mathematical/theoretical physicist in my fifth-year in the Integrated Masters (BS+MS) programme at the Indian Institute of Science Education and Research Mohali and a visiting student at the International Centre for Theoretical Sciences at Bangalore.<br><br>I have a broad interest in high-energy physics and related areas. Currently, my focus mostly revolves around the field theoretic aspects of AdS/CFT, with an occasional dabbling in the stringy aspects of AdS/CFT, and even extensions to flat space holography.<br><br>Further information about my (past) work and my interests besides theoretical high-energy physics can be found below. Unfortunately, most of the interesting projects I am currently working on are at an early stage, but I hope to be able to write something on them soon. <br><br>If you wish to contact me, feel free to send me an email using the button on the left, or at firstname(dot)r(at)icts(dot)res(dot)in.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
