--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 											<h1>Hi, I’m Bharath</h1>
 											<p>An undergraduate researcher and Physics major at <a href="http://iisermohali.ac.in">IISER Mohali</a></p>
 										</header>
-										<p>I am an aspiring mathematical/theoretical physicist in my fifth-year in the Integrated Masters (BS+MS) programme at the Indian Institute of Science Education and Research Mohali and a visiting student at the International Centre for Theoretical Sciences at Bangalore.<br><br>I have a broad interest in high-energy physics and related areas. Currently, my focus mostly revolves around the field theoretic aspects of AdS/CFT, with an occasional dabbling in the stringy aspects of AdS/CFT, and even extensions to flat space holography.<br><br>Further information about my (past) work and my interests besides theoretical high-energy physics can be found below. Unfortunately, most of the interesting projects I am currently working on are at an early stage, but I hope to be able to write something on them soon. <br><br>If you wish to contact me, feel free to send me an email using the button on the left, or at firstname(dot)r(at)icts(dot)res(dot)in.</p>
+										<p>I am an aspiring mathematical/theoretical physicist in my fifth-year in the Integrated Masters (BS+MS) programme at the Indian Institute of Science Education and Research Mohali and a visiting student at the International Centre for Theoretical Sciences at Bangalore.<br><br>I have a broad interest in high-energy physics and related areas. Currently, my focus mostly revolves around the field theoretic aspects of AdS/CFT, with an occasional dabbling in the stringy aspects of AdS/CFT, and even extensions to flat space holography.<br><br>Further information about my (past) work and my interests besides theoretical high-energy physics can be found below. Unfortunately, most of the interesting projects I am currently working on are at an early stage, but I hope to be able to write something on them soon.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
@@ -88,7 +88,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Blog</h2>
+										<h2>Recent Posts</h2>
 									</header>
 									<div class="posts">
 										<article>
@@ -149,22 +149,21 @@
 					<div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
+							<!-- Search 
 								<section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
 								</section>
-
+                            -->
+                            
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
-										<h2>Menu</h2>
+										<h2><br><br><br>Menu</h2>
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
@@ -174,24 +173,10 @@
 												<li><a href="#">Feugiat Veroeros</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
 									</ul>
 								</nav>
 
-							<!-- Section -->
+							<!-- Section 
 								<section>
 									<header class="major">
 										<h2>Ante interdum</h2>
@@ -214,13 +199,13 @@
 										<li><a href="#" class="button">More</a></li>
 									</ul>
 								</section>
-
+                            -->
 							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>If you wish to contact me, feel free to send me an email or hit me up on Twitter!</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
 										<li class="icon solid fa-phone">(000) 000-0000</li>
