--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 										</header>
 										<p>I am an aspiring mathematical/theoretical physicist in my fifth-year in the Integrated Masters (BS+MS) programme at the Indian Institute of Science Education and Research Mohali and a visiting student at the International Centre for Theoretical Sciences at Bangalore.<br><br>I have a broad interest in high-energy physics and related areas. Currently, my focus mostly revolves around the field theoretic aspects of AdS/CFT, with an occasional dabbling in the stringy aspects of AdS/CFT, and even extensions to flat space holography.<br><br>Further information about my (past) work and my interests besides theoretical high-energy physics can be found below. Unfortunately, most of the interesting projects I am currently working on are at an early stage, but I hope to be able to write something on them soon.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Publications</a></li>
-                                            <li><a href="#" class="button big">Resume</a></li>
-                                            <li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="#" class="button big mainpage">Publications</a></li>
+                                            <li><a href="#" class="button big mainpage">Resume</a></li>
+                                            <li><a href="#" class="button big mainpage">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image object">
