--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+                                        <figure>
+                                            <img src="images/Starry-Night-Large.jpg" alt="" />
+                                        </figure>
 									</span>
 								</section>
 
