Got the CSS working

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta name=generator content="Hugo 0.84.2">
     <title>R Bharathkumar</title>
-    <link rel=stylesheet href=assets/css/main.css integrity="sha512-BDQVO2nV9Cwtz8An6H8CzD+/FfgtZ4ZJAYBglfkCD7yfpoEa8ss/hrA1XOmTe3mbmNw8QoCkTNTJdXKwRBXcDg==">
+    <link rel=stylesheet href=assets/css/main.css> <!--integrity="sha512-BDQVO2nV9Cwtz8An6H8CzD+/FfgtZ4ZJAYBglfkCD7yfpoEa8ss/hrA1XOmTe3mbmNw8QoCkTNTJdXKwRBXcDg=="> -->
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <meta name=author content="Marcus Olsson">
-    <meta name=description content="Marcus Olsson is a Developer Advocate at Grafana Labs.">
+    <meta name=author content="Bharathkumar Radhakrishnan">
+    <meta name=description content="Bharathkumar Radhakrishnan is a PhD Student at University of Geneva.">
     <meta name=twitter:card content="summary">
     <meta name=og:type content="website">
-    <meta name=og:title content="Marcus Olsson">
-    <meta name=og:description content="Marcus Olsson is a Developer Advocate at Grafana Labs.">
-    <meta name=og:url content="https://marcus.se.net/">
-    <meta name=og:image content="https://marcus.se.net/images/avatar_hu79b10322fccaa7c63e12808baa2d9ea4_209492_512x512_resize_box_2.png">
+    <meta name=og:title content="Bharathkumar Radhakrishnan">
+    <meta name=og:description content="Bharathkumar Radhakrishnan is a PhD Student at University of Geneva.">
+    <meta name=og:url content="https://rbharathkumar.com">
+    <meta name=og:image content="https://rbharathkumar.com/images/avatar_hu79b10322fccaa7c63e12808baa2d9ea4_209492_512x512_resize_box_2.png">
     <link rel=icon sizes=32x32 type=image/png href=/images/avatar_hu79b10322fccaa7c63e12808baa2d9ea4_209492_32x32_resize_box_2.png>
     <link rel=apple-touch-icon sizes=180x180 type=image/png href=/images/avatar_hu79b10322fccaa7c63e12808baa2d9ea4_209492_180x180_resize_box_2.png>
-    <link rel=“canonical” href=https://marcus.se.net/>
+    <link rel=“canonical” href=https://rbharathkumar.com>
     <link rel=prefetch href=/writing/>
     <link rel=prefetch href=/speaking/>
     <link rel=prefetch href=/projects/>
@@ -29,7 +29,7 @@
             <div class=brand__subtitle>Theoretical Physicist</div>
         </div>
         <nav class=nav>
-            <a class=nav__link href=/>Home</a>
+            <a class=nav__link href="#">Home</a>
             <a class=nav__link href=/writing>Writing</a>
             <a class=nav__link href=/speaking>Speaking</a>
             <a class=nav__link href=/projects>Projects</a>
@@ -50,7 +50,7 @@
                          by supporting the plugin authors of today, and creating educational content for the plugin authors of tomorrow.
                     </p>
                 </header>
-                <section>
+                <!-- <section>
                     <div class="flex items-center justify-between flex-wrap mb-4 mt-8">
                         <h2 class=m-0>Featured article</h2>
                         <a href=/writing>See more articles</a>
@@ -61,7 +61,7 @@
                                 <header class=text-center>
                                     <p class="text-sm text--disabled mb-2">Sep 28, 2020</p>
                                     <h3>
-                                        <a href=https://marcus.se.net/beginner-friendly-issues/>Beginner-friendly issues</a>
+                                        <a href=https://rbharathkumar.combeginner-friendly-issues/>Beginner-friendly issues</a>
                                     </h3>
                                 </header>
                                 <p>
@@ -70,8 +70,8 @@
                             </div>
                         </article>
                     </div>
-                </section>
-                <section>
+                </section> -->
+                <!-- <section>
                     <div class="flex items-center justify-between flex-wrap mb-4 mt-8">
                         <h2 class=m-0>Featured projects</h2>
                         <a href=/projects>See more projects</a>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
             </section>
         </main>
         <footer class=footer>
@@ -134,7 +134,8 @@
             <p class=text--disabled>
                 <small>
                     &copy; Copyright 2021 
-                    <a href=https://marcus.se.net>Marcus Olsson</a>
+                    <a href=https://rbharathkumar.com>R Bharathkumar</a>.
+                    Design heavily inspired by <a href="https://marcus.se.net">Marcus Olsson</a>.
                 </small>
             </p>
         </footer>
