Removed content from Olsson's website

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta name=og:title content="Bharathkumar Radhakrishnan">
     <meta name=og:description content="Bharathkumar Radhakrishnan is a PhD Student at University of Geneva.">
     <meta name=og:url content="https://rbharathkumar.com">
-    <meta name=og:image content="https://rbharathkumar.com/images/avatar_hu79b10322fccaa7c63e12808baa2d9ea4_209492_512x512_resize_box_2.png">
-    <link rel=icon sizes=32x32 type=image/png href=/images/avatar_hu79b10322fccaa7c63e12808baa2d9ea4_209492_32x32_resize_box_2.png>
-    <link rel=apple-touch-icon sizes=180x180 type=image/png href=/images/avatar_hu79b10322fccaa7c63e12808baa2d9ea4_209492_180x180_resize_box_2.png>
+    <meta name=og:image content="#">
+    <link rel=icon sizes=32x32 type=image/png href=#>
+    <link rel=apple-touch-icon sizes=180x180 type=image/png href=#>
     <link rel=“canonical” href=https://rbharathkumar.com>
     <link rel=prefetch href=/writing/>
     <link rel=prefetch href=/speaking/>
@@ -40,14 +40,10 @@
             <section class=section>
                 <header class=section__header>
                     <h1>Hi, I'm Bharath 👋</h1>
-                    <p>I'm a Software Developer with over ten years of building software for data infrastructure, cloud-native applications, and computer graphics.</p>
-                    <p>By perpetually learning new concepts and technologies, applying them in interesting ways, and then teaching others how to do the same, I inspire a culture of creativity and learning in the teams I join.</p>
+                    <p></p>
+                    <!-- <p>By perpetually learning new concepts and technologies, applying them in interesting ways, and then teaching others how to do the same, I inspire a culture of creativity and learning in the teams I join.</p> -->
                     <p>
-                        As a Developer Advocate at 
-                        <a href=https://grafana.com>Grafana Labs</a>
-                        , I help community members build plugins for 
-                        <a href=https://github.com/grafana/grafana>Grafana</a>
-                         by supporting the plugin authors of today, and creating educational content for the plugin authors of tomorrow.
+                        
                     </p>
                 </header>
                 <!-- <section>
@@ -106,10 +102,10 @@
         <footer class=footer>
             <p class="overline text--disabled">About</p>
             <p class=text--disabled>
-                I'm a Developer Advocate at
+                <!-- I'm a Developer Advocate at
                 <a href=https://grafana.com>Grafana Labs</a>
                 , who enjoys learning, building, and
-                teaching software.
+                teaching software. -->
             </p>
             <div class=social>
                 <a class=social__icon href=https://github.com/marcusolsson aria-label=GitHub>
