Added "Updated" date

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name=generator content="Hugo 0.84.2">
     <title>R Bharathkumar</title>
-    <link rel=stylesheet href=assets/css/main.css> <!--integrity="sha512-BDQVO2nV9Cwtz8An6H8CzD+/FfgtZ4ZJAYBglfkCD7yfpoEa8ss/hrA1XOmTe3mbmNw8QoCkTNTJdXKwRBXcDg=="> -->
+    <link rel=stylesheet href=assets/css/main.css>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <meta name=author content="Bharathkumar Radhakrishnan">
@@ -131,7 +131,9 @@
                 <small>
                     &copy; Copyright 2021 
                     <a href=https://rbharathkumar.com>R Bharathkumar</a>.
-                    Design heavily inspired by <a href="https://marcus.se.net">Marcus Olsson</a>.
+                    Design heavily inspired by 
+                    <a href="https://marcus.se.net">Marcus Olsson</a>.
+                    Last updated 9th July 2021.
                 </small>
             </p>
         </footer>
