--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
         </div>
         <nav class=nav>
             <a class=nav__link href="#">Home</a>
-            <a class=nav__link href=/writing>Writing</a>
-            <a class=nav__link href=/speaking>Speaking</a>
-            <a class=nav__link href=/projects>Projects</a>
+            <a class=nav__link href=~/pages/about>About</a>
+            <a class=nav__link href=~/pages/research>Research</a>
+            <a class=nav__link href=~/blog>Blog</a>
+            <a class=nav__link href=~/files/cv>CV</a>
         </nav>
     </header>
     <div class=container>
