--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
         <nav class=nav>
             <a class=nav__link href="#">Home</a>
-            <a class=nav__link href=~/pages/about>About</a>
-            <a class=nav__link href=~/pages/research>Research</a>
-            <a class=nav__link href=~/blog>Blog</a>
-            <a class=nav__link href=~/files/cv>CV</a>
+            <a class=nav__link href=/pages/about>About</a>
+            <a class=nav__link href=/pages/research>Research</a>
+            <a class=nav__link href=/blog>Blog</a>
+            <a class=nav__link href=/files/cv>CV</a>
         </nav>
     </header>
     <div class=container>
@@ -41,63 +41,15 @@
             <section class=section>
                 <header class=section__header>
                     <h1>Hi, I'm Bharath 👋</h1>
-                    <p></p>
+                    <p>I am a PhD student working on the conformal bootstrap at the University of Geneva. </p>
+                    <p>I have a broad interest in high-energy physics and related areas. 
+                        Currently, my focus mostly revolves around the field theoretic aspects of AdS/CFT, 
+                        with an occasional dabbling in the stringy aspects of AdS/CFT, and even extensions to flat space holography.</p>
                     <!-- <p>By perpetually learning new concepts and technologies, applying them in interesting ways, and then teaching others how to do the same, I inspire a culture of creativity and learning in the teams I join.</p> -->
                     <p>
                         
                     </p>
                 </header>
-                <!-- <section>
-                    <div class="flex items-center justify-between flex-wrap mb-4 mt-8">
-                        <h2 class=m-0>Featured article</h2>
-                        <a href=/writing>See more articles</a>
-                    </div>
-                    <div class="grid grid-cols-1">
-                        <article class=card>
-                            <div class=card__body>
-                                <header class=text-center>
-                                    <p class="text-sm text--disabled mb-2">Sep 28, 2020</p>
-                                    <h3>
-                                        <a href=https://rbharathkumar.combeginner-friendly-issues/>Beginner-friendly issues</a>
-                                    </h3>
-                                </header>
-                                <p>
-                                <p>One of the first pieces of advice that aspiring contributors get when looking to contribute to their first open source project is to search for “beginner-friendly issues”. By marking these issues as beginner-friendly, they serve as entry points for anyone who wants to get involved with the project.</p>
-                                </p>
-                            </div>
-                        </article>
-                    </div>
-                </section> -->
-                <!-- <section>
-                    <div class="flex items-center justify-between flex-wrap mb-4 mt-8">
-                        <h2 class=m-0>Featured projects</h2>
-                        <a href=/projects>See more projects</a>
-                    </div>
-                    <div class="grid grid-cols-2 gap-8">
-                        <div class=card>
-                            <div class=card__body>
-                                <div class="flex items-center mb-8">
-                                    <img src=/images/dynamictext-plugin-logo.svg width=32 height=32 alt="The logo for Dynamic text.">
-                                    <span class="card__title ml-4">
-                                        <a href=https://github.com/marcusolsson/grafana-dynamictext-panel>Dynamic text</a>
-                                    </span>
-                                </div>
-                                <p>Define text templates using the data from your data source query.</p>
-                            </div>
-                        </div>
-                        <div class=card>
-                            <div class=card__body>
-                                <div class="flex items-center mb-8">
-                                    <img src=/images/json-plugin-logo.svg width=32 height=32 alt="The logo for JSON API.">
-                                    <span class="card__title ml-4">
-                                        <a href=https://github.com/marcusolsson/grafana-json-datasource>JSON API</a>
-                                    </span>
-                                </div>
-                                <p>Extract data from your JSON API using JSON Paths.</p>
-                            </div>
-                        </div>
-                    </div>
-                </section> -->
             </section>
         </main>
         <footer class=footer>
