Changed main body

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     <h1>Hi, I'm Bharath 👋</h1>
                     <p>I am a PhD student working on the conformal bootstrap at the University of Geneva. </p>
                     <p>I have a broad interest in high-energy physics and related areas. 
-                        Currently, my focus mostly revolves around the field theoretic aspects of AdS/CFT, 
-                        with an occasional dabbling in the stringy aspects of AdS/CFT, and even extensions to flat space holography.</p>
+                        Currently, my focus mostly revolves around the numerical bootstrap program for systems with boundaries.
+                        I have occasionally dabbled in the stringy aspects of AdS/CFT, and even extensions to flat space holography.</p>
                     <!-- <p>By perpetually learning new concepts and technologies, applying them in interesting ways, and then teaching others how to do the same, I inspire a culture of creativity and learning in the teams I join.</p> -->
                     <p>
                         
@@ -55,10 +55,7 @@
         <footer class=footer>
             <p class="overline text--disabled">About</p>
             <p class=text--disabled>
-                <!-- I'm a Developer Advocate at
-                <a href=https://grafana.com>Grafana Labs</a>
-                , who enjoys learning, building, and
-                teaching software. -->
+                I'm PhD student working on the conformal bootstrap at the University of Geneva.
             </p>
             <div class=social>
                 <a class=social__icon href=https://github.com/marcusolsson aria-label=GitHub>
