--- a/pages/research/index.html
+++ b/pages/research/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name=generator content="Hugo 0.84.2">
     <title>R Bharathkumar</title>
-    <link rel=stylesheet href=../assets/css/main.css>
+    <link rel=stylesheet href=../../assets/css/main.css>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <meta name=author content="Bharathkumar Radhakrishnan">
